Switch DB to Postgres (#290)
This Commit switches the DB system from MongoDB to PostgreSQL.
Also, this commit includes some refactoring changes.

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: SIMULATAN <simulatan2319@gmail.com>